--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 socket=127.0.0.1:5555
 wsgi-file=/usr/websites/xeekwebsite_flask/main.py
-callable=xeekweb
+callable=app
 processes=4
 threads=2
